kube/auth-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-app-deploy
  labels:
    name: auth-app-deploy
    app: g-chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: auth-app-pod
      micro-service: auth-service
      app: g-chat-app
  template:
    metadata:
      name: auth-app-pod
      labels:
        name: auth-app-pod
        micro-service: auth-service
        app: g-chat-app
    spec:
      containers:
        - name: auth-app
          image: moshizzl3/auth-service-local:latest
          imagePullPolicy: IfNotPresent
          command: ["./main"]
          ports:
            - containerPort: 8080
          # livenessProbe:
          #   httpGet:
          #     path: /health
          #     port: 8080
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
