kube/auth-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: auth-app-pod
  labels:
    name: auth-app-pod
    micro-service: auth-service
    app: g-chat-app
spec:
  containers:
    - name: auth-app
      image: moshizzl3/auth-service-local:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8080
      # livenessProbe:
      #   httpGet:
      #     path: /health
      #     port: 8080
      #   initialDelaySeconds: 15
      #   periodSeconds: 10
