kube/chat-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app-deploy
  labels:
    name: chat-app-deploy
    app: g-chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: chat-app-pod
      micro-service: chat-service
      app: g-chat-app
  template:
    metadata:
      name: chat-app-pod
      labels:
        name: chat-app-pod
        micro-service: chat-service
        app: g-chat-app
    spec:
      containers:
        - name: chat-app
          image: mslaursen/dls-exam:chat_service
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
