kube/neo4j-pod.yaml
apiVersion: v1
kind: Pod

metadata:
  name: neo4j-pod
  labels:
    name: neo4j-pod
    micro-service: neo4j-service
    app: g-chat-app
spec:
  containers:
    - name: neo4j
      image: neo4j:latest
      ports:
        - containerPort: 7474
          name: http
        - containerPort: 7687
          name: bolt
        - containerPort: 7473
          name: https
      volumeMounts: ## Volumes to mount
        - name: neo4j-plugins
          mountPath: /var/lib/neo4j/plugins
        - name: neo4j-data
          mountPath: /var/lib/neo4j/data
        - name: neo4j-logs
          mountPath: /var/lib/neo4j/logs
        - name: neo4j-import
          mountPath: /var/lib/neo4j/import
  volumes:
    - name: neo4j-plugins
      persistentVolumeClaim:
        claimName: neo4j-plugins-claim
    - name: neo4j-data
      persistentVolumeClaim:
        claimName: neo4j-data-claim
    - name: neo4j-logs
      persistentVolumeClaim:
        claimName: neo4j-logs-claim
    - name: neo4j-import
      persistentVolumeClaim:
        claimName: neo4j-import-claim
