kube/notification-app-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: notification-app-pod
  labels:
    name: notification-app-pod
    micro-service: notification-service
    app: g-chat-app
spec:
  containers:
    - name: notification-app
      image: moshizzl3/notification-service-local:latest
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8081
