kube/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deploy
  labels:
    name: postgres-deploy
    app: g-chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: postgres-pod
      micro-service: postgres-service
      app: g-chat-app
  template:
    metadata:
      name: postgres-pod
      labels:
        name: postgres-pod
        micro-service: postgres-service
        app: g-chat-app
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
              name: default
          volumeMounts: # Volumes to mount
            - name: postgres-data
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-claim
