kube/rabbitmq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq-pod
  labels:
    name: rabbitmq-pod
    micro-service: rabbitmq-service
    app: g-chat-app
spec:
  containers:
    - name: rabbitmq
      image: rabbitmq:3-management
      ports:
        - containerPort: 5672
        - containerPort: 15672
