kube/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deploy
  labels:
    name: redis-deploy
    app: g-chat-app
spec:
  replicas: 1
  selector:
    matchLabels:
      name: redis-pod
      micro-service: redis-service
      app: g-chat-app
  template:
    metadata:
      name: redis
      labels:
        name: redis-pod
        micro-service: redis-service
        app: g-chat-app
    spec:
      containers:
      - name: redis
        image: redis:latest
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: redis-data
          mountPath: /data
      volumes:
      - name: redis-data
        persistentVolumeClaim:
          claimName: redis-data-claim
