kube/relation-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relation-app-deploy
  labels:
    name: relation-app-deploy
    app: g-chat-app
spec:
  replicas: 3
  selector:
    matchLabels:
      name: relation-app-pod
      micro-service: relation-service
      app: g-chat-app
  template:
    metadata:
      name: relation-app-pod
      labels:
        name: relation-app-pod
        micro-service: relation-service
        app: g-chat-app
    spec:
      containers:
        - name: relation-app
          image: moshizzl3/relation-service-local:latest
          imagePullPolicy: IfNotPresent # for using local repo or we can use "Never"
          ports:
            - containerPort: 8000
