kube/auth-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-app-service
  labels:
    name: auth-app-service
    micro-service: auth-service
    app: g-chat-app
spec:
  type: ClusterIP
  selector:
    name: auth-app-pod
    micro-service: auth-service
    app: g-chat-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
