kube/chat-app-service.yaml
apiVersion:  v1
kind: Service
metadata:
  name: chat-service-svc
  labels:
    name: chat-service-svc
    app: g-chat-app
spec:
  selector:
    name: chat-app-pod
    micro-service: chat-service-svc
    app: g-chat-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: NodePort
