kube/neo4j-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: neo4j-db
  labels:
    name: neo4j-service
    micro-service: neo4j-service
    app: g-chat-app
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 7474
      targetPort: 7474
    - name: bolt
      protocol: TCP
      port: 7687
      targetPort: 7687
  selector:
    name: neo4j-pod
    micro-service: neo4j-service
    app: g-chat-app
