kube/notification-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-app-service
  labels:
    name: notification-app-service
    micro-service: notification-service
    app: g-chat-app
spec:
  type: NodePort
  selector:
    name: notification-app-pod
    micro-service: notification-service
    app: g-chat-app
  ports:
    - port: 8081
      targetPort: 8081
      nodePort: 30006
