kube/postgres-service.yaml
--- # Auth postgres service
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth-service
  labels:
    app: auth-db
spec:
  type: ClusterIP
  ports:
    - name: default
      port: 5432
      targetPort: 5432
  selector:
    app: auth-db
--- # Chat postgres service
apiVersion: v1
kind: Service
metadata:
  name: postgres-chat-service
  labels:
    app: chat-db
spec:
  type: ClusterIP
  ports:
    - name: default
      port: 5432
      targetPort: 5432
  selector:
    app: chat-db
