kube/postgres.yaml
--- # Auth postgres persistent volume claim
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: postgres-auth-data-claim
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi 
  storageClassName: local-path  
--- # Chat postgres persistent volume claim
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: postgres-chat-data-claim
spec:
  accessModes:
    - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi 
  storageClassName: local-path
--- # Auth postgres deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth-deploy
  labels:
    app: auth-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-db
  template:
    metadata:
      labels:
        app: auth-db
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-auth-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-auth-data
          persistentVolumeClaim:
            claimName: postgres-auth-data-claim
--- # Chat postgres deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-chat-deploy
  labels:
    app: chat-db-master
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chat-db-master
  template:
    metadata:
      labels:
        app: chat-db-master
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-chat-data
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-chat-data
          persistentVolumeClaim:
            claimName: postgres-chat-data-claim
--- # Auth postgres service
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth-service
  labels:
    app: auth-db
spec:
  type: ClusterIP
  ports:
    - name: default
      port: 5432
      targetPort: 5432
  selector:
    app: auth-db
--- # Chat postgres service
apiVersion: v1
kind: Service
metadata:
  name: postgres-chat-service
  labels:
    app: chat-db
spec:
  type: ClusterIP
  ports:
    - name: default
      port: 5432
      targetPort: 5432
  selector:
    app: chat-db-master
