kube/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: message-broker
  labels:
    name: rabbitmq-service
    micro-service: rabbitmq-service
    app: g-chat-app
spec:
  type: ClusterIP
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: management
      port: 15672
      targetPort: 15672
  selector:
    name: rabbitmq-pod
    micro-service: rabbitmq-service
    app: g-chat-app
