kube/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-db
  labels:
    name: redis-service
    micro-service: redis-service
    app: g-chat-app
spec:
  type: ClusterIP
  ports:
    - name: default-yo
      port: 6379
      targetPort: 6379
  selector:
      name: redis-pod
      micro-service: redis-service
      app: g-chat-app
